# gliflow

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  gliflow.spec  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
assets/: create_icon.py
docs/: security-audit.md
docs/superpowers/specs/: 2026-03-31-gliflow-stt-design.md
src/: app.py  main.py
src/audio/: recorder.py
src/config/: manager.py
src/hotkey/: listener.py
src/output/: inserter.py
src/stt/: __init__.py  base.py  gemini_provider.py  groq_provider.py  openai_provider.py
src/ui/: config_window.py  tray.py  widget.py
tests/: test_config.py  test_providers.py  test_recorder.py
