[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gliflow"
version = "0.1.0"
description = "Speech-to-Text desktop app with global hotkey and floating widget"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "httpx>=0.25.0",
]

[project.scripts]
gliflow = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
